0.10 2013-07-02

    * Support routes that use named-captures.

0.09 2013-02-25

    * Fix to work with Moo v1.000007

0.08 2013-02-24

    * Fork for Dancer2

0.07    2011-11-01

    * Minor updates to fix warnings with Dancer 1.3080
    * Fix POD
    (Alexis Sukrieh)

0.06	2011-05-28

	[ TEST SUITE ]
	* Skip test t/03_resource.t if Dancer is not >= 1.3059_01
      A bug in Dancer::Test in previous versions prevent the test from passing.

0.05    2011-03-04

    [ BUG FIXES ]
    * Fix the test suite with dancer_response
    * Fix dependencies: Dancer 1.3014

Version 0.04
	[ Alexis Sukrieh ]
	* Add all HTTP response status

Version 0.03
    [ Franck Cuny ]
    * New keywords for ReST response status 
      (status_ok, status_created, ...)

Version 0.02
	* 100% coverage
	* fix a bug in 'resource' (order of route hander definition)

Version 0.0001_01
	* Support for prepare_serializer_for_format keyword
      autoamtically set a serializer according to params->{format}
    * Support for resource definition
      When a resource is defined a set of routes are defined in a RESTful manner.