@@ -1,6 +1,7 @@
 0.10 2013-07-02
 
     * Support routes that use named-captures.
+    * Documented serializers configuration.
 
 0.09 2013-02-25
 
